--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -11,7 +11,7 @@ header {
 }
 
 body {
-  padding-top: 300px;
+  padding-top: 280px;
 }
 
 header nav div {
@@ -21,6 +21,8 @@ header nav div {
 }
 
 header nav {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
