--- a/src/style/ComicsByCharacters.css
+++ b/src/style/ComicsByCharacters.css
@@ -3,11 +3,15 @@
   padding: 10px;
   flex-grow: 1;
   flex-basis: 0;
+  background: #f4e9c0;
+  border-radius: 5px;
 }
 
 .character-title {
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   font-size: 24px;
+  font-weight: bold;
   margin-bottom: 20px;
 }
 
@@ -20,7 +24,7 @@
 
 .character-image {
   flex: 1;
-  max-width: 100%;
+  max-width: 150px;
   height: auto;
   border-radius: 8px;
 }
@@ -30,4 +34,16 @@
   font-size: 16px;
   line-height: 1.5;
   color: #333;
+}
+
+.no-results {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  background: #f4e9c0;
+  padding: 20px;
+  margin: 20px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  text-align: center;
 }
