--- a/src/style/SearchBar.css
+++ b/src/style/SearchBar.css
@@ -5,8 +5,8 @@
   color: #1c3d3d;
   background-color: #f4e9c0;
   border: 3px solid #32402a;
-  max-width: 100%;
-  margin: 10px;
+  max-width: 1200px;
+  margin: 0 auto 20px auto;
   text-align: center;
   border-radius: 5px;
   display: flex;
@@ -32,8 +32,14 @@
 
 /*===RESULTS===*/
 
+.search-results {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 .search-results .results {
   font-family: "Montserrat", sans-serif;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -81,7 +87,7 @@
   padding: 10px;
   overflow: auto;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
 
@@ -96,6 +102,18 @@
 
 .result-item .result-description::-webkit-scrollbar-track {
   background-color: #fbf7e6;
+}
+
+.results p {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  background: #f4e9c0;
+  padding: 20px;
+  margin: 20px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  text-align: center;
 }
 
 /*===LOADING===*/
